--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <title>Twilight Princess Item Tracker</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=XARiXwer_c4reOgi7GpG2XICGia-I6MzxE1k6EQSafbPd1LJ7HHZFayoVpn5Po2Bn8jTJVlJzWomTdYJ-xhHvw" charset="UTF-8"></script>
 </head>
 <body>
     <script src="script/items.js"></script>
@@ -81,7 +80,7 @@
     <br/>
     <br/>
     <footer style='bottom:0; width:100%; text-align: center; position: relative; color:grey'>
-        Twilight Princess Randomizer Tracker v1.01 
+        Twilight Princess Randomizer Tracker v1.2 BETA 
     </footer>
 </body>
 </html>
